--- a/introduction.tex
+++ b/introduction.tex
@@ -1,11 +1,12 @@
 %!TEX root = thesis_cgo.tex
 \chapter{Introduction}
 
+
 \epigraph{Everything existing in the universe is the fruit of chance and necessity.}{Democritus}
 
 Molecular machines are assemblies of proteins that interact in a coordinated manner to solve a biological problem. These biological problems, such as coordinating chromosome separation during cell division, cell cycle timing, protein synthesis, etc. cover many processes essential to life. Given the necessity for survival in the face of ever changing environments, evolution has produced a large diversity of molecular mechanisms for solving these problems in a flexible yet robust manner. A machine that only functions properly under unchanging conditions and inputs is not likely to survive in a biological context. Therefore, at the core of each of those processes are highly complex networks of protein interactions that are able to assemble, communicate, coordinate, self-regulate and self-correct in order to accomplish the necessary task reliably. For example, the vital process of DNA replication is executed by a large multitude of proteins that each contribute to the process of copying the genome. The replication machinery must read environmental cues for initiating replication at the correct time, meanwhile complex combinatoric signaling networks ensure that DNA replication unfolds in a processive manner, enzymatic components perform physical work by unwinding the DNA strand for copying, and others communicate with the DNA repair machinery to correct copying errors and avoid harmful mutations. It is clear that solving this biological problem requires the ability of participating proteins to interact with many different partners and mediate many different processes.  
 
-The way proteins are able to control interactions and drive function is through the conformational arrangement of their backbones which is encoded in each protein's amino acid sequence. Specific spatial arrangements of peptide chains, also known as protein structure, allows for specific interactions between proteins to assemble molecular machines, recruit necessary factors and mediate necessary chemical reactions. See \figref{tub4} for a visualization of protein structure. Since the 1950s when the first X-ray crystallography protein structure was solved, we have learned a great deal about how 3D architecture and motions of the chains give rise to protein function. By capturing various conformations of folded protein domains, we have been able to infer that coordinated motions between structural conformations is the main element of control in protein function. For example, X-ray crystallography experiments have shown that the activity of Calmodulin, an important signalling protein is modulated by conformational changes of its $\alpha$-helix domains brought about by binding of Ca+ ions~\cite{meador1992target}. These conformational rearrangements initiate a clamping motion of the helical domains which allow Calmodulin to bind to its downstream targets. However, it is important to note that X-ray crystallography only offers static pictures of protein structure, and provides information mostly on the spatial arrangement of relatively large stable domains in proteins. It therefore became a long standing dogma that the stable 3D folds of a protein chain dictate a protein's function, also known as the "one structure - one function" paradigm. Yet, as we saw with DNA replication, molecular processes are incredibly complex. A single protein is often required to fulfill many functions, interact with various different partners and be able to do so on very fast timescales. It is therefore unlikely that such large scale and consequently slow structural motions can account for all of the precise and rapid control we observe in biological systems. A static description of proteins is not sufficient to explain the degree of functional flexibility and control that we observe. This leaves us with several questions. If one structure means one function, how can the same protein fulfill multiple functions and engage in many different interactions? How can molecular machines offer such precise control of functionality while counting only on a static architectures? The broad aim of this thesis is therefore to improve our understanding of the physical mechanisms underlying the functional complexity of molecular machines.
+The way proteins are able to control interactions and drive function is through the conformational arrangement of their backbones which is encoded in each protein's amino acid sequence. Specific spatial arrangements of peptide chains, also known as protein structure, allows for specific interactions between proteins to assemble molecular machines, recruit necessary factors and mediate necessary chemical reactions. See \figref{fig:tub4} for a visualization of protein structure. Since the 1950s when the first X-ray crystallography protein structure was solved, we have learned a great deal about how 3D architecture and motions of the chains give rise to protein function. By capturing various conformations of folded protein domains, we have been able to infer that coordinated motions between structural conformations is the main element of control in protein function. For example, X-ray crystallography experiments have shown that the activity of Calmodulin, an important signalling protein is modulated by conformational changes of its $\alpha$-helix domains brought about by binding of Ca+ ions~\cite{meador1992target}. These conformational rearrangements initiate a clamping motion of the helical domains which allow Calmodulin to bind to its downstream targets. However, it is important to note that X-ray crystallography only offers static pictures of protein structure, and provides information mostly on the spatial arrangement of relatively large stable domains in proteins. It therefore became a long standing dogma that the stable 3D folds of a protein chain dictate a protein's function, also known as the "one structure - one function" paradigm. Yet, as we saw with DNA replication, molecular processes are incredibly complex. A single protein is often required to fulfill many functions, interact with various different partners and be able to do so on very fast timescales. It is therefore unlikely that such large scale and consequently slow structural motions can account for all of the precise and rapid control we observe in biological systems. A static description of proteins is not sufficient to explain the degree of functional flexibility and control that we observe. This leaves us with several questions. If one structure means one function, how can the same protein fulfill multiple functions and engage in many different interactions? How can molecular machines offer such precise control of functionality while counting only on a static architectures? The broad aim of this thesis is therefore to improve our understanding of the physical mechanisms underlying the functional complexity of molecular machines.
 
 \begin{figure}[h!]
 \centering
@@ -58,6 +59,8 @@ Microtubules are constructed of alternating pairs, or dimers, of the globular pr
 For many years, microtubule nucleation was thought to be the sole function of $\gamma$ tubulin. This view began to change after a mass spectrometry study published in 2001 of the yeast $\gamma$-Tubulin showed that the protein is phosphorylated {\it in vivo} at 8 sites. Several functional studies following up on the finding that $\gamma$-tubulin is regulated show that mutations altering phosphorylation sites, all of which lie in IDRs, have consequences on the organization and stability of microtubules but no effect on their nucleation. This opens a relatively unexplored field of functional coupling where the $\gamma$-TuRC acts not only as a microtubule nucleator, but as a signal integration hub for regulating downstream events in microtubule organization.
 
 One of the best studied phosphorylation sites in $\gamma$-Tubulin is the heavily conserved Tyrosine (Y) 445 which lies in the disordered carboxyl terminal tail of $\gamma$-Tubulin (\gct).  The \gct{} is defined as the final 35 residues in the C-terminal portion of $\gamma$-Tubulin, which lie outside of the folded globular domain. The \gct has been shown to be essential for survival in {\it S. cerevisiae} when cleaved ~\cite{vogel2000carboxy}. Substitution of an Aspartic Acid (D) residue in the place of Y445, making the Y445D mutant, results in slow growing cells with unstable and misaligned mitotic spindles ~\cite{vogel2001phosphorylation}. The aspartic acid substitution is used as a controllable means for recreating the electrostatic environment of a phosphate group by introducing a negative charge. These findings suggest that $\gamma$-Tubulin is playing a role outside of its canonical function of nucleation and is coordinating the dynamics of the mitotic spindle. However, very little is known about the interactions and physical mechanisms that phosphorylation at Y445 affect. The coupling of post-translational modifications (PTMs) to the C-terminal tails of tubulins is well described in the $\gamma$-tubulin orthologues $\alpha$ and $\beta$ tubulin. Specific combinations of PTMs on the tubulin tails act as a \lq tubulin code \rq for selectively recruiting motor proteins and microtubule associated proteins to the microtubule lattice. A similar code has not yet been described for $\gamma$-Tubulin despite evidence that is is regulated \vivo.  While the functional importance of phosphorylation and IDRs in $\gamma$-Tubulin is becoming increasingly clear, the physical mechanisms by which local modifications at IDRs can have global impacts on the large molecular machine remain unstudied. 
+ 
+ \clearpage 
  
  \section{Experimental question}
  
