--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -28,10 +28,10 @@
 \newcommand{\dcunits}{\cm\squared\per\second}
 \newcommand{\figref}[1]{{\bf Fig.~\ref{#1}}}
 \newcommand{\vek}[1]{\mathbf{#1}}
-\newcommand{\vivo}{{\it in vivo}}
-\newcommand{\silico}{{\it in silico}}
-\newcommand{\vitro}{{\it in vitro}}
-\newcommand{\tub}{$\gamma$-Tubulin}
+\newcommand{\vivo}{{\it in vivo}\xspace}
+\newcommand{\silico}{{\it in silico}\xspace}
+\newcommand{\vitro}{{\it in vitro}\xspace}
+\newcommand{\tub}{$\gamma$-Tubulin\xspace}
 
 %%% SETTINGS %%%
 \interfootnotelinepenalty=10000
@@ -83,7 +83,7 @@
 \Acknowledge%
 
 \SetContributionName{\MakeUppercase{Contribution of Authors}}%
-\SetContributionText{All data collection and results obtained during my M.Sc. are presented here as a standard format thesis. This work includes results and figures obtained by collaborators in the Department of Chemistry Dr. Anthony Mittermaier and Jason Harris who conducted NMR experiments and generated all NMR based figures. All computer simulation work and MD figures were done by myself. All text and literature review in this thesis was done by myself with feedback from my supervisor Jackie Vogel and collaborator Anthony Mittermaier. }%
+\SetContributionText{All data collection and results obtained during my M.Sc. are presented here as a standard format thesis. This work includes results and figures obtained by collaborators in the Department of Chemistry Dr. Anthony Mittermaier and Jason Harris who conducted NMR experiments and generated all NMR based figures. All computer simulation work and MD figures were done by myself. Collection of tubulin primary sequences was done by Roman Sarrazin Gendron. All text and literature review in this thesis was done by myself with feedback from my supervisor Jackie Vogel and collaborator Anthony Mittermaier. }%
 \Contribution%
 
 
