--- a/thesis_cgo.bib
+++ b/thesis_cgo.bib
@@ -358,3 +358,54 @@
   year={2011},
   publisher={Nature Publishing Group}
 }
+@article{karplus2002molecular,
+  title={Molecular dynamics simulations of biomolecules},
+  author={Karplus, Martin and McCammon, J Andrew},
+  journal={Nature Structural \& Molecular Biology},
+  volume={9},
+  number={9},
+  pages={646--652},
+  year={2002},
+  publisher={Nature Publishing Group}
+}
+
+@book{haile1992molecular,
+  title={Molecular dynamics simulation},
+  author={Haile, JM},
+  volume={18},
+  year={1992},
+  publisher={Wiley, New York}
+}
+
+@article{hess2008gromacs,
+  title={GROMACS 4: algorithms for highly efficient, load-balanced, and scalable molecular simulation},
+  author={Hess, Berk and Kutzner, Carsten and Van Der Spoel, David and Lindahl, Erik},
+  journal={Journal of chemical theory and computation},
+  volume={4},
+  number={3},
+  pages={435--447},
+  year={2008},
+  publisher={ACS Publications}
+}
+
+@article{kallberg2012template,
+  title={Template-based protein structure modeling using the RaptorX web server},
+  author={K{\"a}llberg, Morten and Wang, Haipeng and Wang, Sheng and Peng, Jian and Wang, Zhiyong and Lu, Hui and Xu, Jinbo},
+  journal={Nature protocols},
+  volume={7},
+  number={8},
+  pages={1511--1522},
+  year={2012},
+  publisher={Nature Publishing Group}
+}
+
+@article{kaminski2001evaluation,
+  title={Evaluation and reparametrization of the OPLS-AA force field for proteins via comparison with accurate quantum chemical calculations on peptides},
+  author={Kaminski, George A and Friesner, Richard A and Tirado-Rives, Julian and Jorgensen, William L},
+  journal={The Journal of Physical Chemistry B},
+  volume={105},
+  number={28},
+  pages={6474--6487},
+  year={2001},
+  publisher={ACS Publications}
+}
